# dateutil

./: .coverage  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NEWS  README  README.md  README.rst  RELEASING  SECURITY.md  appveyor.yml  azure-pipelines.yml  build_cmd.py  codecov.yml  commit_msg.txt  conftest.py  dateutil.moin  example.py  fix_installation.sh  gen_monkeytype_stubs.py  install_for_testing.sh  install_tzutils.py  pyproject.toml  release.py  requirements-dev.txt  setup.cfg  setup.py  skip_property_tests.py  test.py  test_requirements.txt  tox.ini  update_module.sh  (+2 more)
.cache/v/cache/: lastfailed
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: publish.yml  pypytests.yml  test_pypy.yml  tests-eol.yml  tests.yml  validate.yml
asv_bench/: asv.conf.json
asv_bench/benchmarks/: parsing.py
changelog.d/: 000.data.rst  0633.bugfix.rst  0634.bugfix.rst  0643.data.rst  0644.misc.rst  0679.bugfix.rst  1002.feature.rst  1007.feature.rst  1015.misc.rst  1017.misc.rst  1020.misc.rst  1024.misc.rst  1025.doc.rst  1039.feature.rst  1043.bugfix.rst  1046.bugfix.rst  1051.bugfix.rst  1055.bugfix.rst  1060.misc.rst  1068.misc.rst  1076.misc.rst  1077.bugfix.rst  1078.misc.rst  1083.misc.rst  1085.deprecation.rst  1091.bugfix.rst  1101.bugfix.rst  1104.misc.rst  1107.misc.rst  1115.bugfix.rst  1122.bugfix.rst  1123.feature.rst  1125.bugfix.rst  1128.data.rst  1130.deprecation.rst  1130.feature.rst  1133.misc.rst  1153.feature.rst  1158.bugfix.rst  1163.bugifx.rst  (+172 more)
ci_tools/: make_zonefile_metadata.py  pypy_upgrade.sh  retry.bat  retry.sh  run_tz_master_env.sh
dateutil/: __init__.py  _common.py  _common.pyi  _version.py  absolutedelta.py  easter.py  easter.pyi  formatter.py  parser.py  relativedelta.py  relativedelta.pyi  rfc2445.py  rrule.py  rrule.pyi  scheduler.py  tokenization.py  tz.py  tzcommon.py  tzwin.py  utils.py  utils.pyi  zdump.py
dateutil/parser/: __init__.py  __init__.pyi  _construction.py  _parser.py  _parser.pyi  isoparser.py  isoparser.pyi
dateutil/test/: _common.py  conftest.py  test.py  test_absolutedelta.py  test_easter.py  test_import_star.py  test_imports.py  test_internals.py  test_isoparser.py  test_parser.py  test_parser_parametrized.py  test_relativedelta.py  test_rrule.py  test_tz.py  test_utils.py  test_zonefile.py
dateutil/test/property/: test_isoparse_prop.py  test_parser_prop.py  test_tz_prop.py
dateutil/tz/: __init__.py  _common.py  _common.pyi  _factories.py  _factories.pyi  tz.py  tz.pyi  tzwin.py  win.py
dateutil/zoneinfo/: __init__.py  __init__.pyi  rebuild.py
docs/: Makefile  absolutedelta.rst  changelog.rst  conf.py  easter.rst  examples.rst  formatter.rst  index.rst  make.bat  parser.rst  relativedelta.rst  requirements-docs.txt  rrule.rst  tz.rst  tzwin.rst  utils.rst  zoneinfo.rst
docs/exercises/: index.rst
docs/exercises/solutions/: mlk-day-rrule.rst  mlk_day_rrule_solution.py  next-monday-meeting.rst  next-monday-relativedelta.rst  next_monday_meeting_relativedelta.rst  next_monday_meeting_relativedelta_solution.py  parsing-local-tzname.rst
docs/samples/: EST5EDT.ics
requirements/3.3/: constraints.txt  requirements-dev.txt
sandbox/: rrulewrapper.py  scheduler.py
src/dateutil/: __init__.py  _common.py  _tzdata_impl.py  easter.py  relativedelta.py  rrule.py  tzutils.py  utils.py
src/dateutil/parser/: __init__.py  _parser.py  chain_parser.py  isoparser.py
src/dateutil/tz/: __init__.py  _common.py  _factories.py  _tzfile.py  _tzpath.py  tz.py  win.py
src/dateutil/zoneinfo/: __init__.py  rebuild.py
tests/: _common.py  conftest.py  fuzz_parser.py  test_chain_parser.py  test_easter.py  test_import_star.py  test_imports.py  test_internals.py  test_isolated_tzutils.py  test_isoparser.py  test_parser.py  test_parser_error.py  test_parser_error_str.py  test_relativedelta.py  test_rrule.py  test_tt_info.py  test_tt_info_repr.py  test_tz.py  test_tzfile.py  test_tzutils.py  test_utils.py
tests/property/: test_isoparse_prop.py  test_parser_prop.py  test_tz_prop.py
tests/resources/: update_tzif.py
tests/resources/data/: keys.json  zoneinfo_fat.json  zoneinfo_slim.json  zoneinfo_v1.json
