[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dateutil/_version.py"

[tool.towncrier]
    package = "dateutil"
    package_dir = "dateutil"
    filename = "NEWS"
    directory = "changelog.d"
    title_format = "Version {version} ({project_date})"
    issue_format = "GH #{issue}"
    template = "changelog.d/template.rst"

    [[tool.towncrier.type]]
        directory = "data"
        name = "Data updates"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "deprecations"
        name = "Deprecations"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bugfixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "doc"
        name = "Documentation changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Misc"
        showcontent = true

