[bdist_wheel]
universal = 1

[metadata]
name = python-dateutil
description = Extensions to the standard Python datetime module
author = Gustavo Niemeyer
author_email = gustavo@niemeyer.net
maintainer = Paul Ganssle
maintainer_email = dateutil@python.org
url = https://github.com/dateutil/dateutil
project_urls =
    Documentation = https://dateutil.readthedocs.io/en/stable/
    Source = https://github.com/dateutil/dateutil
long_description_content_type = text/x-rst
license = Dual License
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries

[options]
zip_safe = True
setup_requires = setuptools_scm
install_requires = six >= 1.5
package_dir=
    =src
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*
packages = find:

[options.packages.find]
where=src

[options.package_data]
dateutil.zoneinfo = dateutil-zoneinfo.tar.gz

[sdist]
formats = gztar

[tool:pytest]
python_files=
    test_*.py
    *_test.py
    *_solution.py
xfail_strict = true
filterwarnings =
    error
    error::DeprecationWarning
    error::PendingDeprecationWarning
markers =
    gettz
    import_star
    isoparser
    parserinfo
    rrule
    rruleset
    rrulestr
    smoke
    tz_resolve_imaginary
    tzfile
    tzlocal
    tzoffset
    tzstr
